--- a/preview.html
+++ b/preview.html
@@ -362,8 +362,8 @@
     </div>
     
     <div class="nav-controls">
-    	<button id="prev-chapter">← Previous</button>
-    	<button id="next-chapter">Next →</button>
+    	<button id="prev-chapter">← Previous Chapter</button>
+    	<button id="next-chapter">Next Chapter→</button>
 	</div>
     
     <div id="missing-verses-container"></div>
