--- a/preview.html
+++ b/preview.html
@@ -101,9 +101,15 @@
             color: #2c3e50;
         }
         
-        .verse {
+        .latina-pona-mode .verse {
             margin-bottom: 15px;
             padding: 10px;
+            border-radius: 4px;
+            transition: background-color 0.2s;
+        }
+        .sitelen-pona-mode .verse {
+            margin-bottom: 0px;
+            padding: 0px;
             border-radius: 4px;
             transition: background-color 0.2s;
         }
