--- a/preview.html
+++ b/preview.html
@@ -124,11 +124,14 @@
         }
         
         .verse-number {
-            font-weight: bold;
-            margin-right: 5px;
-            color: #7f8c8d;
-            vertical-align:top;
-        }
+  			font-weight: bold;
+  			margin-right: 5px;
+  			color: #7f8c8d;
+  			vertical-align: top;
+  			width: 20px;
+  			display: inline-block;
+  			margin-left: 5px;
+		}
         
         .verse-content {
             display: inline;
