--- a/preview.html
+++ b/preview.html
@@ -167,6 +167,7 @@
             font-feature-settings: "liga" 1, "rlig" 1, "calt" 1;
             -webkit-font-feature-settings: "liga" 1, "rlig" 1, "calt" 1;
             display:inline-block;
+            margin-top:10px;
         }
         
         .space{
