--- a/preview.html
+++ b/preview.html
@@ -132,6 +132,10 @@
   			display: inline-block;
   			margin-left: 5px;
 		}
+		
+		.sitelen-pona-mode .verse-number {
+		    width: 80px;
+		}
         
         .verse-content {
             display: inline;
