--- a/preview.html
+++ b/preview.html
@@ -547,12 +547,12 @@
         const numberLookup={
         1: "wan",
 		2: "tu",
-		3: "wan-tu",
+		3: "tu-wan",
 		4: "tu-tu",
 		5: "luka",
-		6: "wan-luka",
-		7: "tu-luka",
-		8: "luka wan-tu",
+		6: "luka-wan",
+		7: "luka-tu",
+		8: "luka tu-luka",
 		9: "luka tu-tu",
 		10: "luka-luka",
 		20: "mute",
