--- a/preview.html
+++ b/preview.html
@@ -917,6 +917,11 @@
             		    	let w2=convertNameToSitelenPona(w.replace("~",""));
             		    	wnum+=w2.split(" ").length;
             		    }
+            		    if(aw.match("^[0-9][0-9]*$")){
+            		    	let w2=numberToSitPona(aw-0);
+            		    	wnum+=w2.split(" ").length;
+            		    	w=w.replace(aw,w2);
+            		    }
             		    if(aw==="la"){
             		    	console.log("la:" + ((words.length-i)+wnum));
             		    }
