--- a/index.html
+++ b/index.html
@@ -905,8 +905,7 @@
             		}
             		
             		l=words.map((w,i)=>{
-            		    var aw=w.replace(/[,.;]/g,"").trim();
-            		    //console.log(aw);
+            		    var aw=w.replace(/[,.;$]/g,"").trim();
             		    if(aw==="lili" || aw ==="la"){
             		    	w='<span class="wide2">' + w + '</span>';
             		    }
@@ -917,8 +916,10 @@
             		    	let w2=convertNameToSitelenPona(w.replace("~",""));
             		    	wnum+=w2.split(" ").length;
             		    }
-            		    if(aw==="la"){
-            		    	console.log("la:" + ((words.length-i)+wnum));
+            		    if(aw.match("^[0-9][0-9]*$")){
+            		    	let w2=numberToSitPona(aw-0);
+            		    	wnum+=w2.split(" ").length;
+            		    	w=w.replace(aw,w2);
             		    }
             		    if(aw==="o"){
             				if(last00.length>0){
