--- a/preview.html
+++ b/preview.html
@@ -210,7 +210,7 @@
         .sitelen-pona-mode .verse-number-st .sitelen{
         	font-family: "LinjaJS", system-ui, serif;
             font-size: 24px;
-            line-height: 0.5;
+            line-height: 0.4;
             white-space: pre-wrap;
             /* enable ligatures / contextual features used by linja fonts */
             font-variant-ligatures: common-ligatures discretionary-ligatures contextual;
@@ -276,10 +276,12 @@
         .sitelen-pona-mode .newline{
         	display:block;
         	opacity:0%;
+        	height:22px;
         }
         .sitelen-pona-mode .newline2{
         	display:block;
         	opacity:0%;
+        	height:22px;
         }
         .sitelen-pona-mode .punct{
         	display:none;
