--- a/preview.html
+++ b/preview.html
@@ -596,7 +596,7 @@
 		5: "luka",
 		6: "luka-wan",
 		7: "luka-tu",
-		8: "luka tu-luka",
+		8: "luka tu-wan",
 		9: "luka tu-tu",
 		10: "luka-luka",
 		20: "mute",
