--- a/preview.html
+++ b/preview.html
@@ -295,7 +295,7 @@
             margin: 0 4px;
         }
         
-        .sitelen-pona-mode .name-rect {
+        .man .sitelen-pona-mode .name-rect {
             display: inline-block;
   			border: 3px solid #333;
   			border-radius: 6px;
@@ -1067,7 +1067,7 @@
             
             return text.replace(/~(\w+)/g, (a,p,s)=>
                 '<span class="name-tp">' + convertNameToTokiPona(p) + '</span>' + 
-                '<span class="name-rect2">&#xF1990' + convertNameToSitelenPona(p,true).html + '&#xF1990;</span>');
+                '<span class="name-rect">&#xF1990' + convertNameToSitelenPona(p,true).html + '&#xF1991;</span>');
         }
 
         // Apply sitelen pona font to verse content
