--- a/preview.html
+++ b/preview.html
@@ -1358,7 +1358,7 @@
                 	let nsllpj=nasinsitelenkalamapilinjalili(b.proper);
                 	htm=nsllpj.map(c=>{
                 		let dots=rep(",",c.dots);
-                		return c.word + dots";
+                		return c.word + dots;
                 	}).join("");
                 	nm=nsllpj.map(c=>c.word).join(" ");
                 	
