--- a/preview.html
+++ b/preview.html
@@ -869,7 +869,7 @@
                             <span class="verse-number-lt"><span class="latina">${verseNum}</span></span>
                             
                             <span class="verse-content">${formatVerseContent(content)}</span>
-                            <span class="verse-number-st"><span class="sitelen">${numberToSitPona(verseNum)}</span></span>
+                            <span class="verse-number-st"><span class="sitelen">${numberToNasinNanpaPona(verseNum)}</span></span>
                         </div>
                     `;
                 } else if (line.trim() !== '') {
