--- a/preview.html
+++ b/preview.html
@@ -1006,7 +1006,7 @@
             		    	wnum+=w2.split(" ").length;
             		    }
             		    if(aw.match("^[0-9][0-9]*$")){
-            		    	let w2=numberToSitPona(aw-0);
+            		    	let w2=numberToNasinNanpaPona(aw-0);
             		    	wnum+=w2.split(" ").length;
             		    	w=w.replace(aw,w2);
             		    }
