--- a/preview.html
+++ b/preview.html
@@ -1350,7 +1350,7 @@
             if(!b.sitelen){
                 let build = "";
                 if(fullDictionary.indexOf(b.proper.toLowerCase())>=0){
-                	return {words: (b.proper.toLowerCase() + " :"), html: (b.proper.toLowerCase() + "&#8203;<span class='nudgeUp2'>:</span>")};	
+                	return {words: (b.proper.toLowerCase() + " :"), html: (b.proper.toLowerCase() + "&#8203;:")};	
                 }
                 let nm="";
                 let htm="";
