--- a/preview.html
+++ b/preview.html
@@ -1063,6 +1063,10 @@
             			if(w.length>0){
             				wnum++;
             			}
+            			
+            			if(wnum>splitLaTot){
+            				w=w+ "!";
+            			}            			
             			return w;
             		}).join("<span class='st-space'>&#8203;</span><span class='lt-space'> </span>");
             		l=l.replace(/\*/g,'<span class="newline2">');
