--- a/preview.html
+++ b/preview.html
@@ -1064,7 +1064,7 @@
             				wnum++;
             			}
             			
-            			if(wnum>splitLaTot){
+            			if(wnum>=splitLaTot){
             				w=w+ "!";
             			}            			
             			return w;
