--- a/preview.html
+++ b/preview.html
@@ -103,6 +103,8 @@
         
         .sitelen-pona-mode .st-problem{
         	color:red;
+            font-size: 14px;
+  			font-family: monospace;
         	
         }
         .latina-pona-mode .st-problem{
