--- a/preview.html
+++ b/preview.html
@@ -505,7 +505,7 @@
         <label for="debug-toggle">Show Debug Information</label>
     </div>
 
-    <div id="debug-container full-view" class="debug-info">
+    <div id="debug-container" class="debug-info full-view">
         <h3>Debug Information</h3>
         <div id="debug-info"></div>
     </div>
