--- a/preview.html
+++ b/preview.html
@@ -1008,10 +1008,8 @@
             		currentState.verse=verse;
             	}else{
             		currentState.verse=null;
-            		if(currentState.isolated){
-            			currentState.isolated=false;
-            			removeIsolated();
-            		}
+            		currentState.isolated=false;
+            		isolatedToggle.checked = currentState.isolated;
             	}
             	showToast("URL updated");
             	updateURL();
