--- a/preview.html
+++ b/preview.html
@@ -1265,7 +1265,7 @@
             				
             				       			
             				return w;
-            			}).join("<span class='st-space'>&#8203;</span><span class='lt-space'> </span>");
+            			}).join("<span class='st-space'> </span><span class='lt-space'> </span>");
             			l=l.replace(/\*/g,'<span class="newline2">');
             			l=l.replace(/\$/g,'<span class="newline">');
             			l=l.replace(/\@/g,'</span>');
