--- a/preview.html
+++ b/preview.html
@@ -1265,10 +1265,10 @@
             				
             				       			
             				return w;
-            			}).join("~<span class='lt-space'> </span>");
-            			l=l.replace(/\*[\~]/g,'*');
-            			l=l.replace(/\$[\~]/g,'$');
-            			l=l.replace(/\~/g,"<span class='st-space'> </span>");            			
+            			}).join("%<span class='lt-space'> </span>");
+            			l=l.replace(/\*[\%]/g,'*');
+            			l=l.replace(/\$[\%]/g,'$');
+            			l=l.replace(/\%/g,"<span class='st-space'> </span>");            			
             			l=l.replace(/\*/g,'<span class="newline2">');
             			l=l.replace(/\$/g,'<span class="newline">');
             			l=l.replace(/\@/g,'</span>');
