--- a/preview.html
+++ b/preview.html
@@ -1266,8 +1266,7 @@
             				       			
             				return w;
             			}).join("%<span class='lt-space'> </span>");
-            			l=l.replace(/\*[\%]/g,'*');
-            			l=l.replace(/\$[\%]/g,'$');
+            			l=l.replace(/\@\%/g,'@');
             			l=l.replace(/\%/g,"<span class='st-space'> </span>");            			
             			l=l.replace(/\*/g,'<span class="newline2">');
             			l=l.replace(/\$/g,'<span class="newline">');
