--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
             testament: 'old_testament',
             book: 'genesis',
             chapter: 1,
-            verse: null,
+            verse: [],
             sitelen: false,
             isolated: false,
             embed: false
