--- a/index.html
+++ b/index.html
@@ -1341,6 +1341,9 @@
         
         function removeIsolated() {
             chapterDisplay.classList.remove('isolated');
+            if(isolatedToggle.checked){
+            	isolatedToggle.checked=false;
+            }
         }
         
         // Apply sitelen pona font to verse content
